--- a/4vehicle-semantics-extraction.tex
+++ b/4vehicle-semantics-extraction.tex
@@ -67,7 +67,7 @@ The process is known as \textit{Opening} occurs when the morphology operations a
 
 Now with the background subtraction operation in place, the foreground objects can now be detected. Each of these foreground object are referred to as a \textit{blob}. Each of these blobs are then filtered using some handcrafted parameters to separate between vehicles and non-vehicles objects. To further enhance this process, a deep learning model was deployed to increase the probability of filtering non-vehicle blobs. 
 
-In the proposed method pipeline, the work of \cite{redmon2016you} namely YOLO (You Only Look Once) - a deep learning model was deployed as a complementary module. Now, as YOLO is a deep learning model designed to be real-time object detection, the detection process incurred very little overhead to the overall computational time and cost. Here, the bounding box of each foreground blob is sent into the YOLO network as an input. The network will then divide the input into multiple smaller regions and perform prediction of the bounding box along with the class probability. As the YOLO model is pre-trained with "vehicle" as one of the many classes, no further retraining was done in the proposed method pipeline.
+In the proposed method pipeline, the work of \cite{redmon2016you} namely YOLOv2 (You Only Look Once) - a deep learning model was deployed as a complementary module. Now, as YOLO is a deep learning model designed to be real-time object detection, the detection process incurred very little overhead to the overall computational time and cost. Here, the bounding box of each foreground blob is sent into the YOLO network as an input. The network will then divide the input into multiple smaller regions and perform prediction of the bounding box along with the class probability. As the YOLO model is pre-trained with "vehicle" as one of the many classes, no further retraining was done in the proposed method pipeline.
 
 With that in place, each of the blobs which were identified as a vehicle were tracked, on the other hand, blobs which were not identified as a vehicle was left as a possible candidate. This is done in view of misidentification due to poor lighting conditions or error during the background subtraction process. For each of the vehicle blobs, the semantic extraction module can now proceed.  
 
@@ -120,14 +120,16 @@ The use of these atom-based spatial-temporal cube is paramount in this work. By 
 
 As object specific semantics from the scene provides deeper insights for surveillance purposes, as mention earlier, this work focuses on the extraction of two types of object specific semantics. These low level semantics are the Color and Motion semantics. Although several other semantics were extracted as well, the extraction of those semantics is not discussed in detail as they are simple extracting based on input data filenames. Table \ref{table:semantics} lists down all the semantics which were extracted in this work. The following subsections focuses on both the color and motion low-level semantics extraction process and framework.  
 
-\begin{table} \centering []
+
+
+\begin{table} \centering
 \caption {Types of Extracted Semantics and the Methods used}
 \label{table:semantics}
 \begin{tabular}{|l|l|l|}
 \hline
 \textbf{No.} & \textbf{Semantics Type} & \textbf{Method(s)}                                                                                                          \\ \hline
-\textbf{1}   & Date                    & Filename extraction                                                                                                         \\ \hline
-\textbf{2}   & Time                    & Filename extraction                                                                                                         \\ \hline
+\textbf{1}   & Date                    & Filename data extraction                                                                                                         \\ \hline
+\textbf{2}   & Time                    & Filename data extraction                                                                                                         \\ \hline
 \textbf{3}   & Color                   & \begin{tabular}[c]{@{}l@{}}i) Handcrafted Feature \& Distance Estimation (HSV)\\ ii) Distance Estimation (Luv)\end{tabular} \\ \hline
 \textbf{4}   & Motion                  & \begin{tabular}[c]{@{}l@{}}i) Handcrafted Feature\\ ii) Collection of Centroids\end{tabular}                                \\ \hline
 \textbf{5}   & Object Type             & Deep Learning                                                                                                               \\ \hline
@@ -239,16 +241,38 @@ In Munroe's experiments, 222,500 user sessions consisting of 40,000 women and 10
 
 The use of video data for surveillance purposes no doubt lies in its ability to capture motion information. These information are usually provided by users when tasked to describe an action which occurred in a given scene. In this work, the collection motion performed by a vehicle in the scene is denoted as a vehicle's trajectory.  
 
-However, a vehicle's motion in a carpark may vary significantly from another vehicle's motion, instead of generating a fine representation of the vehicle's motion, the individual motions of the vehicle is captured. 
+Typically, a user describes motion information using a combination of several information such as time of occurrence, location and how the motion occurred. Traditionally, the motion information from videos are converted into text based descriptions using handcrafted methods. Given the following example: "A yellow vehicle was turning into the cross section between Road Alpha and Road Beta at 3:30pm when a black vehicle came rushing over and hitting a pedestrian in the process during commotion", this statement could be converted into a statement such as "yellow car turn left Road Alpha and Road Beta". 
 
-
-As the trajectory information from each vehicle is important, it is a paramount task to ensure that the motion information from each vehicle was captured and stored. Since the types of motion in a carpark scenario varies from each carpark user, instead of generating a fine representation of motion such the conventional motion vector, these information were stored in the form of four cardinal directional and four intermediate directional bins along with one which denotes minuscule and negligible motions. The directional bins are represented in Figure \ref{fig:cardinalbins}.
-
-\cc{neeeds to re-write this portion to fill up with motion semantic info}
+While motions are not as subjective as the concept of colors, text based descriptions of motion events are less intuitive when compared to a graphical description. Hence, this work aims to extract motion information and present them in a graphical form which is naturally more intuitive hence providing an accurate description of an event.
 
 
 
-In the following subsections, the details of both implementations of semantic extraction frameworks are discussed in detail. 
+In the case of a carpark scene, the trajectory information from each vehicle is important, it is a paramount task to ensure that the motion information from each vehicle is captured and stored. Since the types of motion performed in a carpark setting varies from user to user, instead of generating a fine representation of motion such the conventional motion vector, these information were broken into smaller motion information and stored into the database. Both the suggested motion semantics extraction frameworks deploys different extraction methods which would be discussed further in this chapter.
+
+
+
+
+%In the following subsections, the details of both implementations of semantic extraction frameworks are discussed in detail. 
+
+
+\subsection{Other Semantic}
+
+In this subsection, the extraction process of the other low level semantics are discussed briefly. As mentioned earlier, several other semantics were extracted for this work, namely, the time and date information, object type as well as object size. As the extractions of these semantics were simple and/or played little-to-no roles in the both the extraction module and retrieval engine, the process will be described here.
+
+\subsubsection{Date \& Time}
+During course of the dataset collection, the camera was set to name the recorded files according to the time and date. As described in  \ref{section:dataset_used}, the camera was set to record video clips from 8:30am to 6:30pm in the evening with each clip being 6 minutes long. As the filename contains both the time and date information, the date information can be easily extracted while the time information can be deduced when a vehicle is observed in the carpark scene. 
+
+\begin{align}
+	Video Frame Time = Video Duration \times \frac{Current Frame}{Total Frames} + Time_{filename} 
+\end{align}
+
+
+Upon extracting these information, simple formating is done to ensure these information conform to the typical SQL database requirements.
+
+\subsubsection{Object Type \& Size}
+Since the object of interest in this work is the vehicles in the carpark scene, YOLOv2 was used to assist the validation of the foreground object detected by the background subtraction method as described in \ref{subsection:fundamental}. With that in place, the color and motion of all these objects were assumed to fall under the "vehicle" class. 
+
+Along with that, the size of the foreground objects' bounding box are saved in the database as the object size.
 
 
 
@@ -503,7 +527,9 @@ As the entire process was done repeatedly over every single frame in the video, 
 
 
 
-In this work, the motion of a vehicle is quantized into 8 directional bins along with 1 bin which denotes little to no significant movement. Figure \ref{fig:cardinalbins} illustrates this property, this setup allows complex motion information to be captured.
+In this work, the motion of a vehicle is quantized into 8 directional bins (in the form of four cardinal directional and four intermediate directional bins) along with another bin which denotes minuscule and negligible motion informations. Figure \ref{fig:cardinalbins} illustrates this property, this setup allows complex motion information to be captured.
+
+s
 
 
 \begin{figure}[hbt!]\centering
