continue with chapter 5. thanks

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -2,8 +2,14 @@
 The use of video based surveillance system has exploded over the past decade. The ease of implementation along with its benefits drew the attention of both the public and private sectors, without a doubt, the digital security industry caught on to it and consequently bloomed with more and more retail stores, shopping malls, and even homes equipping themselves with closed circuit televisions (CCTV) as a means for safety precaution. With the rise of such technology and coupled the hype around the idea of Internet of Things (IoT) and Big Data over the recent years, there has been a deeper thirst among researchers in finding ways for practical uses of bridging existing data with technology to bring about a new wave in the research field.
 
 \subsection{Overview}
+\label{section:introduction}
+%In this work, the author takes on a journey to explore this new research territory of utilizing video based surveillance footage for 
 
-In this work, the author takes on a journey to explore this new research territory of utilizing video based surveillance footage for 
+Traditionally, the process of finding a particular video from a huge collection is done manually. This process involves an inquirer who is looking for a particular scene or shot, and an person-in-charge who manages the CCTV video collection. In a carpark scenario, the inquirer would typically need to provide information such as time, date, color of the vehicle, vehicle registration number, and place of which an incident occurred. 
+
+Next, the person-in-charge would have to sift through hours and hours of video in order to find a distinct video shot. This process is undeniably time consuming, laborious, monotonous and tedious. While the task is potentially simpler and straightforward when there is only one video shot with clear-cut definitive time and date given, this process takes an enormous effort when the time and date is not given, or even in cases when all the video shots with similar properties are desired. 
+
+Evidently, there exist a gap which can be addressed using a well designed retrieval engine.
 
 
 \subsection{Motivation and Problem Statements}
